Prevent horizontal scrollbars

--- a/wp-content/themes/sfpublicpress/less/style.less
+++ b/wp-content/themes/sfpublicpress/less/style.less
@@ -36,3 +36,7 @@ Version:        1.0
 
 // archives
 @import "archive.less";
+
+body {
+    overflow-x: hidden;
+}
